--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
 
 @font-face {
     font-family: 'firacode';
-    src: url('/FiraCode-Regular.otf');
+    src: url('FiraCode-Regular.otf');
 }
 
 * {
